--- a/ASPTokenInputLib/ASPTokenInputLib.csproj
+++ b/ASPTokenInputLib/ASPTokenInputLib.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
   </ItemGroup>
@@ -39,6 +40,12 @@
     <Compile Include="ASPTokenInput.cs" />
     <Compile Include="JSONObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptRegister.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="scripts\jquery.tokeninput.min.js" />
+    <EmbeddedResource Include="scripts\jqueryRegister.min.js" />
+    <EmbeddedResource Include="styles\token-input.min.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
